--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Sergio Asenjo",
   "license": "ISC",
   "devDependencies": {
+    "browser-sync": "^2.18.2",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^2.2.0",
     "gulp-less": "^3.3.0"
